tests/harness/errors/060_return_keyword.eu
# Mistake: using return keyword (not needed in eucalypt)
f(x): return x * 2
result: f(5)
